...
        public static let secondaryVariant = Color("SecondaryVariant", bundle: .main)
        
        // MARK: Feedback Colors
        public static let success = Color("Success", bundle: .main)
        public static let warning = Color("Warning", bundle: .main)
        public static let error = Color("Error", bundle: .main)
        public static let info = Color("Info", bundle: .main)
        
        // MARK: Surface Colors
        public static let background = Color("Background", bundle: .main)
        public static let surface = Color("Surface", bundle: .main)
        public static let surfaceVariant = Color("SurfaceVariant", bundle: .main)
        
...
